// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View>
  <Avatar
    avatarUrl="foo.png"
  />
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Ishamel
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      />
    </View>
    <HtmlView
      RootComponent={[Function]}
      addLineBreaks={false}
      onError={[Function]}
      onLinkLongPress={null}
      onLinkPress={[Function]}
      stylesheet={
        Object {
          "a": Object {
            "color": "#0DC39F",
          },
          "p": Object {
            "marginBottom": 3,
            "marginTop": 3,
          },
        }
      }
      textComponentProps={
        Object {
          "style": Object {
            "color": "#5D757A",
            "fontFamily": "Circular-Book",
            "fontSize": 14,
          },
        }
      }
      value="tick followed tock followed tick followed tock"
    />
  </View>
</View>
`;

exports[`shows the post title when displayPostTitle is true 1`] = `
<View>
  <Avatar
    avatarUrl="foo.png"
  />
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Ishamel
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        on "
        What's good? A long enough post title to...
        "
      </Text>
    </View>
    <HtmlView
      RootComponent={[Function]}
      addLineBreaks={false}
      onError={[Function]}
      onLinkLongPress={null}
      onLinkPress={[Function]}
      stylesheet={
        Object {
          "a": Object {
            "color": "#0DC39F",
          },
          "p": Object {
            "marginBottom": 3,
            "marginTop": 3,
          },
        }
      }
      textComponentProps={
        Object {
          "style": Object {
            "color": "#5D757A",
            "fontFamily": "Circular-Book",
            "fontSize": 14,
          },
        }
      }
      value="tick followed tock followed tick followed tock"
    />
  </View>
</View>
`;
